added new image

--- a/git.html
+++ b/git.html
@@ -12,5 +12,10 @@
       src=" https://images.unsplash.com/photo-1703088066010-af61bb552da4?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxM3x8fGVufDB8fHx8fA%3D%3D "
       alt=""
     />
+    <p>Another image below:</p>
+    <img
+      src="https://images.unsplash.com/photo-1660989057589-345e34fac2e2?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDExfEJKSk10dGVESkE0fHxlbnwwfHx8fHw%3D"
+      alt=""
+    />
   </body>
 </html>
