Updated git.html. Added some text

--- a/git.html
+++ b/git.html
@@ -19,5 +19,14 @@
       src="https://images.unsplash.com/photo-1660989057589-345e34fac2e2?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDExfEJKSk10dGVESkE0fHxlbnwwfHx8fHw%3D"
       alt=""
     />
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis
+      aspernatur autem, suscipit dicta eius, libero tempora voluptates ipsa
+      ratione ex, quo excepturi! Modi voluptates aut hic temporibus laboriosam
+      voluptatum est. Ducimus corrupti fugit, modi laudantium labore vel
+      pariatur mollitia temporibus sit illo incidunt, hic sapiente recusandae
+      tempora nam, accusantium animi quibusdam veritatis officia possimus sed
+      unde quos? Fugiat, beatae minus?
+    </p>
   </body>
 </html>
