Update git.html on new branch
Added a new paragraph

--- a/git.html
+++ b/git.html
@@ -28,5 +28,15 @@
       tempora nam, accusantium animi quibusdam veritatis officia possimus sed
       unde quos? Fugiat, beatae minus?
     </p>
+  <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis
+      aspernatur autem, suscipit dicta eius, libero tempora voluptates ipsa
+      ratione ex, quo excepturi! Modi voluptates aut hic temporibus laboriosam
+      voluptatum est. Ducimus corrupti fugit, modi laudantium labore vel
+      pariatur mollitia temporibus sit illo incidunt, hic sapiente recusandae
+      tempora nam, accusantium animi quibusdam veritatis officia possimus sed
+      unde quos? Fugiat, beatae minus?
+    </p>
+    
   </body>
 </html>
